// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`/rollup.js code splitting should correctly chunk up CSS files 1`] = `
{
  "assets/a.css": "
/* packages/rollup/test/specimens/css-dependencies/a.css */
.mc_a {
    color: aqua;
}
",
  "assets/b.css": "
/* packages/rollup/test/specimens/css-dependencies/b.css */
.mc_b {
    color: blue;
}
",
  "assets/c.css": "
/* packages/rollup/test/specimens/css-dependencies/c.css */
.mc_c {
    color: cyan;
}
",
}
`;

exports[`/rollup.js code splitting should output metadata successfully when unreferenced CSS is output to common 1`] = `
{
  "assets/a.css": "
/* packages/rollup/test/specimens/metadata/a.css */
.mc541d3f5c_a { color: aqua; }
",
  "assets/b.css": "
/* packages/rollup/test/specimens/metadata/b.css */
.mc04101138_b { color: blue; }
",
  "assets/d.css": "
/* packages/rollup/test/specimens/metadata/d.css */
.mc7de0d66b_d { color: darkkhaki; }
",
  "assets/fake.css": "
/* fake.css */
.mc2c838439_fake { color: red; }",
  "assets/metadata.json": "
{
    "a.js": {
        "assets": [
            "assets/a.css"
        ]
    },
    "b.js": {
        "assets": [
            "assets/b.css"
        ]
    },
    "d.js": {
        "assets": [
            "assets/d.css"
        ]
    }
}",
}
`;

exports[`/rollup.js code splitting should output only 1 JSON file 1`] = `
{
  "assets/dependencies.css": "
/* packages/rollup/test/specimens/dependencies.css */
.mc_wooga {
    background: blue;
}
",
  "assets/exports.json": "
{
    "packages/rollup/test/specimens/dependencies.css": {
        "wooga": "mc_fooga mc_wooga"
    },
    "packages/rollup/test/specimens/simple.css": {
        "str": "\\"string\\"",
        "fooga": "mc_fooga"
    }
}",
  "assets/simple.css": "
/* packages/rollup/test/specimens/simple.css */
.mc_fooga {
    color: red;
}
",
}
`;

exports[`/rollup.js code splitting should support circular JS dependencies 1`] = `
{
  "a.js": "
export { a as default } from './b.js';
",
  "assets/b.css": "
/* packages/rollup/test/specimens/circular-dependencies/b.css */
.mc_b { color: blue; }
/* packages/rollup/test/specimens/circular-dependencies/a.css */
.mc_a { color: aqua; }
",
  "b.js": "
const b$1 = "mc_b";
var css$1 = {
    b: b$1
};

console.log(css$1, a);

var b = "b";

const a$1 = "mc_a";
var css = {
    a: a$1
};

console.log(css, b);

var a = "a";

export { a, b as default };
",
}
`;

exports[`/rollup.js code splitting should support deduping names via rollup (hashed) 1`] = `
{
  "assets/a-Dcwg2jww.css": "
/* packages/rollup/test/specimens/multiple-chunks/a.css */
.mc_a {
    color: aqua;
}
",
  "assets/a-Dsg_L_Fg.css": "
/* packages/rollup/test/specimens/multiple-chunks/subfolder/a.css */
.mc_a { color: azure; }",
  "assets/b-8fp88OXG.css": "
/* packages/rollup/test/specimens/multiple-chunks/b.css */
.mc_b {
    color: blue;
}
",
}
`;

exports[`/rollup.js code splitting should support deduping names via rollup (not hashed) 1`] = `
{
  "assets/a.css": "
/* packages/rollup/test/specimens/multiple-chunks/a.css */
.mc_a {
    color: aqua;
}
",
  "assets/a2.css": "
/* packages/rollup/test/specimens/multiple-chunks/subfolder/a.css */
.mc_a { color: azure; }",
  "assets/b.css": "
/* packages/rollup/test/specimens/multiple-chunks/b.css */
.mc_b {
    color: blue;
}
",
}
`;

exports[`/rollup.js code splitting should support dynamic imports 1`] = `
{
  "assets/a.css": "
/* packages/rollup/test/specimens/dynamic-imports/a.css */
.mc_a {
    color: aqua;
}
",
  "assets/b.css": "
/* packages/rollup/test/specimens/dynamic-imports/e.css */
.mc_e {
    color: #EEE;
}
/* packages/rollup/test/specimens/dynamic-imports/b.css */
.mc_b {
    color: blue;
}
",
  "assets/c.css": "
/* packages/rollup/test/specimens/dynamic-imports/c.css */
.mc_c {
    color: cyan;
}
",
  "assets/d.css": "
/* packages/rollup/test/specimens/dynamic-imports/f.css */
.mc_f {
    color: floralwhite;
}
/* packages/rollup/test/specimens/dynamic-imports/d.css */
.mc_d {
    color: darkred;
}
",
}
`;

exports[`/rollup.js code splitting should support outputting metadata about CSS dependencies 1`] = `
{
  "assets/a.css": "
/* packages/rollup/test/specimens/metadata/a.css */
.mc_a { color: aqua; }
",
  "assets/b.css": "
/* packages/rollup/test/specimens/metadata/b.css */
.mc_b { color: blue; }
",
  "assets/d.css": "
/* packages/rollup/test/specimens/metadata/d.css */
.mc_d { color: darkkhaki; }
",
  "assets/metadata.json": "
{
    "a.js": {
        "assets": [
            "assets/a.css"
        ]
    },
    "b.js": {
        "assets": [
            "assets/b.css"
        ]
    },
    "d.js": {
        "assets": [
            "assets/d.css"
        ]
    }
}",
}
`;

exports[`/rollup.js code splitting should support outputting metadata about CSS dependencies to a named file 1`] = `
{
  "assets/a.css": "
/* packages/rollup/test/specimens/metadata/a.css */
.mc_a { color: aqua; }
",
  "assets/b.css": "
/* packages/rollup/test/specimens/metadata/b.css */
.mc_b { color: blue; }
",
  "assets/chunks.json": "
{
    "a.js": {
        "assets": [
            "assets/a.css"
        ]
    },
    "b.js": {
        "assets": [
            "assets/b.css"
        ]
    },
    "d.js": {
        "assets": [
            "assets/d.css"
        ]
    }
}",
  "assets/d.css": "
/* packages/rollup/test/specimens/metadata/d.css */
.mc_d { color: darkkhaki; }
",
}
`;

exports[`/rollup.js code splitting should support splitting up CSS files 1`] = `
{
  "assets/dependencies.css": "
/* packages/rollup/test/specimens/dependencies.css */
.mc_wooga {
    background: blue;
}
",
  "assets/simple.css": "
/* packages/rollup/test/specimens/simple.css */
.mc_fooga {
    color: red;
}
",
}
`;

exports[`/rollup.js code splitting should support splitting up CSS files w/ shared assets 1`] = `
{
  "assets/a.css": "
/* packages/rollup/test/specimens/css-chunks/a.css */
.mc_a {
    color: aqua;
}
",
  "assets/b.css": "
/* packages/rollup/test/specimens/css-chunks/b.css */
.mc_b {
    color: blue;
}
",
  "assets/c.css": "
/* packages/rollup/test/specimens/css-chunks/shared.css */
.mc_shared {
    color: snow;
}
/* packages/rollup/test/specimens/css-chunks/c.css */
.mc_c {
    color: cyan;
}
",
}
`;

exports[`/rollup.js code splitting shouldn't break when dynamic imports are tree-shaken away (rollup/rollup#2659) 1`] = `{}`;

exports[`/rollup.js code splitting shouldn't put bundle-specific CSS in common.css 1`] = `
{
  "assets/a.css": "
/* packages/rollup/test/specimens/common-splitting/shared.css */
.mc_shared {
    color: snow;
}
/* packages/rollup/test/specimens/common-splitting/a.css */
.mc_a {
    color: aqua;
}
.mc_a2 {
    color: azure;
}
/* packages/rollup/test/specimens/common-splitting/shared3.css */
.mc_shared3 {
    color: saddlebrown;
}
/* packages/rollup/test/specimens/common-splitting/b.css */
.mc_b {
    color: blue;
}
.mc_b2 {
    color: blanchedalmond;
}
",
  "assets/c.css": "
/* packages/rollup/test/specimens/common-splitting/c.css */
.mc_c {
    color: cyan;
}

.mc_c2 {
    color: crimson;
}",
  "assets/shared2.css": "
/* packages/rollup/test/specimens/common-splitting/shared2.css */
.mc_shared2 {
    color: sandybrown;
}
",
}
`;

exports[`/rollup.js code splitting shouldn't use entry hashes as part of the CSS file names 1`] = `
{
  "assets/simple-DvRVXbZI.css": "
/* packages/rollup/test/specimens/simple.css */
.mc_fooga {
    color: red;
}
",
  "simple.BtzGFnGS.js": "
const str = "\\"string\\"";
const $values = {
    str,
};
const fooga = "mc_fooga";
var css = {
    $values,
fooga
};

console.log(css);
",
}
`;
